# MIA-AI

./: .gitignore  AGENTS.md  Borrar Memoria.bat  Iniciar MIA.bat  PENDIENTE.md  README.md  Vectorizar Memoria.bat  clear_memory.py  config.example.yaml  config.yaml  conversation_turn_system_guide.md  pyproject.toml  vectorize_memory.py
data/chat_sessions/: session_2026-02-16_00-34-56.jsonl  session_2026-03-04_00-28-40.jsonl
models/stt/: faster-whisper-large-v3.txt
models/tts/: xtts-v2.txt
prompts/: expressions.md  personality.md
src/mia/: __init__.py  audio_io.py  config.py  dave_patch.py  discord_bot.py  discord_sink.py  lipsync.py  llm_llamacpp.py  llm_lmstudio.py  llm_openrouter.py  main.py  pipeline.py  rag_memory.py  stt_whispercpp.py  tts_edge.py  tts_filter.py  tts_xtts.py  vad.py  vtube_osc.py  vtube_studio.py  web_server.py  ws_server.py
src/mia/conversations/: __init__.py  conversation_handler.py  conversation_utils.py  message_handler.py  single_conversation.py  tts_manager.py  types.py
src/mia/webui/: app.js  index.html  memory3d.js  style.css
tests/: test_config.py  test_message_handler.py  test_prompt.py  test_rag.py  test_tts_manager.py  test_webui.py
web/: app.js  index.html  style.css
