[project]
name = "mia"
version = "0.1.0"
description = "MIA – VTuber assistant with minimal latency"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
    "sounddevice",
    "numpy",
    "python-osc",
    "websockets",
    "openai",
    "chromadb",
    "sentence-transformers",
    "edge-tts",                # Microsoft Edge TTS (no requiere GPU)
    "aiohttp",                 # HTTP server para WebUI
    "py-cord[voice]>=2.6.0",   # Discord bot con soporte de voz
    "python-dotenv>=1.0.0",    # Carga de .env (token Discord, etc.)
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# ══════════════════════════════════════════════════════════════
# ML dependencies -- DO NOT add to [dependencies] or extras.
# These require manual installation:
#   1. uv pip install faster-whisper
#   2. (optional) uv pip install llama-cpp-python
#
# faster-whisper usa CTranslate2 (no depende de PyTorch).
# No es necesario instalar torch/torchaudio manualmente.
# ══════════════════════════════════════════════════════════════

[project.scripts]
mia = "mia.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mia"]

[tool.pytest.ini_options]
testpaths = ["tests"]

