[project]
name = "mia"
version = "0.2.0"
description = "MIA – Discord bot with AI voice and text"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
    "numpy",
    "openai",
    "chromadb",
    "sentence-transformers",
    "edge-tts",
    "py-cord[voice]>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# ══════════════════════════════════════════════════════════════
# ML dependencies -- DO NOT add to [dependencies] or extras.
# These require manual installation:
#   1. pip install faster-whisper
#   2. (optional) pip install llama-cpp-python
# ══════════════════════════════════════════════════════════════

[project.scripts]
mia = "mia.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
